# tc-ecometrics-backend

./: History.py  calculations.py  data__.py  db.xlsx  di_container.py  drive_.py  file_manager.py  main.py  pyproject.toml
