[tool.poetry]
name = "techapi"
version = "0.1.0"
description = ""
authors = ["ali <ali.cetin@spryfox.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
pandas = "^2.0.2"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
pymongo = "^4.4.0"
kink = "^0.6.5"
mongoengine = "^0.27.0"
pydrive = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
